# feed_mt76x8_iot

./: README.md
hlk7688a-pins-ctrl/: Makefile
hlk7688a-pins-ctrl/src/: CMakeLists.txt  README.md
hlk7688a-pins-ctrl/src/include/: gpiomux.h  main.h  mt76x8_ctrl_types.h  refclk.h
hlk7688a-pins-ctrl/src/src/: gpiomux.c  main.c  refclk.c
libi2c-amaork/: Makefile
libi2c-amaork/src/: Makefile
libi2c-amaork/src/example/: Makefile
mt76x8_gpio/: Makefile
mt76x8_gpio/src/: CMakeLists.txt  mt76x8_gpio.c
pwm_driver/: Makefile
pwm_driver/src/: Makefile  demo.c  mt7628-pwm.c  mt7628-pwm.h
soft_uart_driver/: Makefile
soft_uart_driver/src/: module.c
ssd1306fb/: Makefile
ted-spi-utils/: Makefile
ted-spi-utils/src/: CMakeLists.txt  arduino_wrapper.cpp  arduino_wrapper.h  cs5460.cpp  cs5460.h  linuxspi.h  main.cpp  mqtt.cpp  mqtt.h
ted_driver/: Makefile
ted_driver/src/: Makefile  ted-drv.c
tr157-softwaremodules/: Makefile
trailling-edge-dimmer/: Makefile
trailling-edge-dimmer/files/etc/board.d/: 991-board-config
trailling-edge-dimmer/files/etc/init.d/: firstbootconfig  tedd
trailling-edge-dimmer/src/: CMakeLists.txt  main.cpp  mqtt.cpp
